--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,14 +3,19 @@
     --color-dark-beige: #FAF7F3;
     --color-dark: #322F2E;
     --color-dark-alt: #313131;
-    --color-light-brown: #C47344;
+    --color-brown: #C47344;
     --color-gray: #D3D3D3;
-    --color-pink: #F9A28F;
     --color-green: #32686F;
+    
     --color-black: #000;
     --color-white: #fff;
 
+    --color-tagline-light: #F9EDE2;
+    --color-tagline-pink: #F9A28F;
+    --color-tagline-dark: #4D4D4D;
+
     --border-radius: 10px;
+    --border-radius-medium: 20px;
     --border-radius-large: 50px;
 
     --font-family-base: "Roboto", sans-serif;
