--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,5 +5,7 @@
     'globals';
 
 @import
-'blocks/header',
-'blocks/button';
+    'blocks/header',
+    'blocks/button',
+    'blocks/hero',
+    'blocks/tagline-bg';
