--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -1,5 +1,5 @@
 .button{
-    background-color: var( --color-light-brown);
+    background-color: var( --color-brown);
     border-radius: var(--border-radius-large);
     color: var(--color-white);
     border: none;
