--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,4 +8,6 @@
     'blocks/header',
     'blocks/button',
     'blocks/hero',
-    'blocks/tagline-bg';
+    'blocks/tagline-bg',
+    'blocks/solutions',
+    'blocks/solutions-card';
