--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@
     --color-dark-alt: #313131;
     --color-brown: #C47344;
     --color-gray: #D3D3D3;
+    --color-gray-button: #E1DED9;
     --color-green: #32686F;
     
     --color-black: #000;
@@ -13,6 +14,9 @@
     --color-tagline-light: #F9EDE2;
     --color-tagline-pink: #F9A28F;
     --color-tagline-dark: #4D4D4D;
+
+    --color-card-bg: #FFFAF2;
+    --card-box-shadow: 1px 1px 20px 0px #DDDDDD;
 
     --border-radius: 10px;
     --border-radius-medium: 20px;
