--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -7,4 +7,10 @@
     padding-block: 13px;
     font-weight: bold;
     font-size: 14px;
+
+    &--light{
+        border: 2px solid var(--color-gray-button);
+        background: transparent;
+        color: var(--color-black);
+    }
 }
