--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,7 +7,7 @@
     --color-gray: #D3D3D3;
     --color-gray-button: #E1DED9;
     --color-green: #32686F;
-    
+
     --color-black: #000;
     --color-white: #fff;
 
@@ -17,6 +17,8 @@
 
     --color-card-bg: #FFFAF2;
     --card-box-shadow: 1px 1px 20px 0px #DDDDDD;
+
+    --quiz-box-shadow: 1px 1px 12px 0px rgba(0, 0, 0, 50%), -8px 8px 0px 0px var(--color-green);
 
     --border-radius: 10px;
     --border-radius-medium: 20px;
