--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,4 +10,5 @@
     'blocks/hero',
     'blocks/tagline-bg',
     'blocks/solutions',
-    'blocks/solutions-card';
+    'blocks/solutions-card',
+    'blocks/quiz';
