feedback-form styles

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -20,6 +20,8 @@
 
     --quiz-box-shadow: 1px 1px 12px 0px rgba(0, 0, 0, 50%), -8px 8px 0px 0px var(--color-green);
 
+    --box-shadow-input: 1px 1px 12px 0px rgba(0, 0, 0, 10%);
+
     --border-radius: 10px;
     --border-radius-medium: 20px;
     --border-radius-large: 50px;
