--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,4 +11,5 @@
     'blocks/tagline-bg',
     'blocks/solutions',
     'blocks/solutions-card',
-    'blocks/quiz';
+    'blocks/quiz',
+    'blocks/feedback-form';
