--- a/styles/styles.css
+++ b/styles/styles.css
@@ -188,6 +188,7 @@ svg * {
   --color-card-bg: #FFFAF2;
   --card-box-shadow: 1px 1px 20px 0px #DDDDDD;
   --quiz-box-shadow: 1px 1px 12px 0px rgba(0, 0, 0, 50%), -8px 8px 0px 0px var(--color-green);
+  --box-shadow-input: 1px 1px 12px 0px rgba(0, 0, 0, 10%);
   --border-radius: 10px;
   --border-radius-medium: 20px;
   --border-radius-large: 50px;
@@ -208,6 +209,11 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
 }
 
 .header {
@@ -447,4 +453,68 @@ a {
 }
 .quiz__button {
   margin-top: 23px;
+}
+
+.feedback-form {
+  background-color: var(--color-dark-beige);
+  max-width: 1200px;
+  padding-block: 44px;
+  padding-left: 40px;
+  margin-top: 135px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+}
+.feedback-form__body {
+  width: 550px;
+}
+.feedback-form__title {
+  font-size: 40;
+  font-weight: bold;
+  line-height: 54px;
+}
+.feedback-form__description {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 32px;
+  margin-top: 24px;
+}
+.feedback-form__input-container {
+  width: 380px;
+  height: 65px;
+  display: inline-block;
+  margin-top: 30px;
+  position: relative;
+}
+.feedback-form__input {
+  height: 100%;
+  width: 100%;
+  border-radius: var(--border-radius);
+  border: none;
+  box-shadow: var(--box-shadow-input);
+  padding-left: 31px;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 500;
+}
+.feedback-form__input::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.45);
+}
+.feedback-form__input::placeholder {
+  color: rgba(0, 0, 0, 0.45);
+}
+.feedback-form__submit-button {
+  position: absolute;
+  height: 29px;
+  width: 29px;
+  background-color: var(--color-dark);
+  align-content: center;
+  border-radius: 50%;
+  border: none;
+  right: 9px;
+  top: 19px;
 }/*# sourceMappingURL=styles.css.map */
