--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,4 +12,6 @@
     'blocks/solutions',
     'blocks/solutions-card',
     'blocks/quiz',
-    'blocks/feedback-form';
+    'blocks/feedback-form',
+    'blocks/footer',
+    'blocks/text-light';
