--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,9 +216,47 @@ button {
   cursor: pointer;
 }
 
+.container {
+  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x);
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  -webkit-clip-path: inset(100%) !important;
+          clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
+@media (max-width: 767px) {
+  .hidden-mobile {
+    display: none !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .visible-mobile {
+    display: none !important;
+  }
+}
+
 .header {
   padding-top: 38px;
   padding-inline: 70px;
+}
+@media (max-width: 1023px) {
+  .header {
+    padding-top: 28px;
+    padding-inline: 20px;
+  }
 }
 .header__inner {
   display: flex;
@@ -227,17 +265,57 @@ button {
   -moz-column-gap: 30px;
        column-gap: 30px;
 }
+.header__logo-wrapper {
+  min-width: 140px;
+  min-height: 28px;
+}
+@media (max-width: 1023px) {
+  .header__logo-wrapper > img {
+    min-width: 70px;
+    min-height: 14px;
+  }
+}
+@media (max-width: 1023px) {
+  .header__logo-wrapper {
+    min-width: 93.3px;
+    min-height: 18.6x;
+  }
+}
 .header__menu {
   font-size: 16px;
   font-weight: bold;
   margin-left: auto;
 }
+@media (max-width: 1023px) {
+  .header__menu {
+    font-size: 14px;
+  }
+}
 .header__menu-list {
   display: flex;
   flex-direction: row;
-  -moz-column-gap: 43px;
-       column-gap: 43px;
 }
+@media (min-width: 1077px) {
+  .header__menu-list {
+    -moz-column-gap: 43px;
+         column-gap: 43px;
+  }
+}
+@media (min-width: 481px) {
+  .header__menu-list {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
+.header__menu-link {
+  white-space: nowrap;
+}
+.header__button {
+  width: 129px;
+  height: 47px;
+  white-space: nowrap;
+}
+
 .button {
   background-color: var(--color-brown);
   border-radius: var(--border-radius-large);
@@ -286,6 +364,7 @@ button {
 }
 .hero__galleries {
   margin-top: 52px;
+  margin: 0 auto;
 }
 .hero__galleries-list {
   display: flex;
@@ -296,6 +375,8 @@ button {
 .hero__galleries-item {
   max-width: 255px;
   max-height: 95px;
+  min-height: 47.5px;
+  min-width: 127.5px;
 }
 .hero__whatis {
   margin-top: 30px;
@@ -590,4 +671,136 @@ button {
   line-height: 20px;
   color: var(--color-gray);
   display: block;
+}
+
+.burger-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 48px;
+  aspect-ratio: 1;
+  position: relative;
+  border-radius: var(--border-radius-small);
+}
+@media (hover: hover) {
+  .burger-button:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .burger-button:active {
+    background-color: var(--color-accent);
+  }
+}
+.burger-button::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: var(--color-dark);
+  border-radius: 5px;
+  box-shadow: 0 -8px, 0 8px;
+}
+
+.cross-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 48px;
+  aspect-ratio: 1;
+  position: relative;
+  border-radius: var(--border-radius-small);
+}
+@media (hover: hover) {
+  .cross-button:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .cross-button:active {
+    background-color: var(--color-accent);
+  }
+}
+.cross-button::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: var(--color-dark);
+  border-radius: 5px;
+  transform: rotate(-45deg);
+}
+.cross-button::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: var(--color-dark);
+  border-radius: 5px;
+  transform: rotate(45deg);
+}
+
+.mobile-overlay {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 15px 20px;
+  border: none;
+  background: linear-gradient(var(--color-light-beige), var(--color-white));
+}
+.mobile-overlay:modal {
+  min-width: 100%;
+  min-height: 100%;
+}
+.mobile-overlay__close-button-wrapper {
+  display: flex;
+  justify-content: end;
+}
+.mobile-overlay__body {
+  display: flex;
+  justify-content: center;
+}
+.mobile-overlay__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 30px;
+  min-height: 88vh;
+}
+.mobile-overlay__link {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  line-height: 48px;
+}
+@media (hover: hover) {
+  .mobile-overlay__link:hover::after {
+    width: 100%;
+  }
+}
+@media (hover: none) {
+  .mobile-overlay__link:active::after {
+    width: 100%;
+  }
+}
+.mobile-overlay__link::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  translate: -50%;
+  width: 0;
+  height: 2px;
+  background-color: currentColor;
+  transition-duration: inherit;
 }/*# sourceMappingURL=styles.css.map */
