add new color variable and enhance responsive styles across components

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
     --color-light-beige: #FFF8EE;
+    --color-background-shadow: #FDF4EC;
     --color-dark-beige: #FAF7F3;
     --color-dark: #322F2E;
     --color-dark-alt: #313131;
