--- a/styles/blocks/_tagline-bg.scss
+++ b/styles/blocks/_tagline-bg.scss
@@ -1,21 +1,25 @@
-.tagline-bg{
+.tagline-bg {
 
     border-radius: var(--border-radius-medium);
     font-weight: bold;
     max-height: 25px;
     padding-inline: 12px;
     padding-block: 5px;
-    align-content: center;
-    
-    &--pink{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &--pink {
         background-color: var(--color-tagline-pink);
         color: var(--color-white);
         font-size: 12px;
+        max-width: 54px;
     }
 
-    &--light{
+    &--light {
         background-color: var(--color-tagline-light);
-        color:  var(--color-tagline-dark);
+        color: var(--color-tagline-dark);
         font-size: 13px;
         margin-left: -12px;
         padding-left: 31px;
