--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,20 +1,32 @@
-body{
+body {
     color: var(--color-dark);
-    background: linear-gradient(var(--color-light-beige), var(--color-white));
-    background-repeat: no-repeat;
+    //background: linear-gradient(var(--color-light-beige), var(--color-white));
+    //background-repeat: no-repeat;
+    background-color: var(--color-white);
     font-family: var(--font-family-base);
     font-size: 20px;
     font-weight: 400;
     line-height: 1.75;
-
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
 }
 
-button{
+button {
     cursor: pointer;
+}
+
+.content {
+    padding-inline: 70px;
+
+    @include desktop{
+        padding-inline: 50px;
+    }
+    
+    @include tablet {
+        padding-inline: 20px;
+    }
 }
