--- a/styles/blocks/_feedback-form.scss
+++ b/styles/blocks/_feedback-form.scss
@@ -3,9 +3,8 @@
     max-width: 1200px;
 
     padding-block: 44px;
-    padding-left: 40px;
+    padding-inline: 40px;
 
-    margin-top: 135px;
     margin-left: auto;
     margin-right: auto;
 
@@ -14,22 +13,48 @@
     align-items: center;
     column-gap: 50px;
 
+    @include mobile {
+        display: block;
+    }
+
     &__body {
         width: 550px;
+
+        @include tablet {
+            width: 100%;
+        }
     }
 
     &__title {
         font-size: 40;
         font-weight: bold;
         line-height: 54px;
+
+        @include tablet {
+            font-size: 32px;
+            line-height: 42px;
+        }
+
+        @include mobile {
+            font-size: 24px;
+            line-height: 32px;
+        }
     }
 
     &__description {
         font-size: 20px;
         font-weight: 500;
         line-height: 32px;
-
         margin-top: 24px;
+
+        @include tablet {
+            margin-top: 16px;
+        }
+
+        @include mobile {
+            font-size: 16px;
+            line-height: 26px;
+        }
     }
 
     &__input-container {
@@ -37,8 +62,12 @@
         height: 65px;
         display: inline-block;
         margin-top: 30px;
-
         position: relative;
+
+        @include tablet {
+            width: 100%;
+            height: 50px;
+        }
     }
 
     &__input {
@@ -58,6 +87,11 @@
         &::placeholder {
             color: rgba(0, 0, 0, 45%);
         }
+
+        @include tablet {
+            font-size: 16px;
+            line-height: 26px;
+        }
     }
 
     &__submit-button {
@@ -68,8 +102,14 @@
         align-content: center;
         border-radius: 50%;
         border: none;
-        right: 9px; 
+        right: 9px;
         top: 19px;
-    }
 
+        @include tablet {
+            height: 24px;
+            width: 24px;
+            right: 7px;
+            top: 13px;
+        }
+    }
 }
