--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -1,10 +1,23 @@
 .footer {
     margin-top: 146px;
-
+    margin-inline: 50px;
     display: flex;
+    justify-content: space-between;
     column-gap: 82px;
 
-    padding-inline: 180px;
+    @include desktop {
+        column-gap: 62px;
+        margin-inline: 0;
+        margin-top: 70px;
+    }
+
+    @include mobile {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+        margin-top: 30px;
+    }
 
     &__credits {
         max-width: 340px;
@@ -30,16 +43,30 @@
         }
     }
 
-    &__copyright{
-        & span:last-child{
+    &__copyright {
+        & span:last-child {
             margin-top: 20px;
         }
     }
 
     &__body {
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
         column-gap: 108px;
+
+        @include desktop {
+            justify-content: start;
+        }
+
+        @include tablet {
+            column-gap: 20px;
+        }
+
+        @include mobile-s {
+            width: 100%;
+            flex-direction: column;
+            row-gap: 20px;
+        }
 
         &-title {
             font-size: 13px;
@@ -47,17 +74,42 @@
             line-height: 20px;
         }
 
-        &-link{
-            font-size: 12px;
+        &-link {
+            &>span {
+                display: inline-block;
+                align-items: center;
+                max-height: 23px;
+            }
+        }
+
+        &-list {
+            display: flex;
+            flex-direction: column;
+            row-gap: 7px;
+            width: 100%;
+        }
+
+        &-item {
+            font-size: 13px;
             line-height: 20px;
+            white-space: nowrap;
+        }
+
+        &-solutions {
+            min-width: 139px;
+        }
+
+        &-resources {
+            min-width: 187px;
         }
     }
 
-    &__tagline{
+    &__tagline {
+        display: inline;
         margin-left: 8px;
     }
 
-    &__bottom{
+    &__bottom {
         padding-inline: 180px;
         margin-top: 35px;
         padding-bottom: 80px;
@@ -65,16 +117,36 @@
         justify-content: space-between;
         align-items: flex-end;
 
-        &-icons{
+        @include desktop {
+            padding-inline: 50px;
+            padding-bottom: 40px;
+        }
+
+        @include mobile {
+            padding-inline: 20px;
+            padding-bottom: 20px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            row-gap: 20px;
+        }
+
+        &-icons {
             align-content: center;
             width: 204px;
             display: flex;
             flex-direction: row;
             column-gap: 10px;
+
+            @include mobile {
+                width: 100%;
+                justify-content: center;
+                column-gap: 20px;
+            }
         }
     }
 
-    &__privacy{
+    &__privacy {
         margin-right: 5px;
     }
 
