--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,6 +173,7 @@ svg * {
 }
 :root {
   --color-light-beige: #FFF8EE;
+  --color-background-shadow: #FDF4EC;
   --color-dark-beige: #FAF7F3;
   --color-dark: #322F2E;
   --color-dark-alt: #313131;
@@ -198,8 +199,7 @@ svg * {
 
 body {
   color: var(--color-dark);
-  background: linear-gradient(var(--color-light-beige), var(--color-white));
-  background-repeat: no-repeat;
+  background-color: var(--color-white);
   font-family: var(--font-family-base);
   font-size: 20px;
   font-weight: 400;
@@ -214,6 +214,20 @@ a {
 
 button {
   cursor: pointer;
+}
+
+.content {
+  padding-inline: 70px;
+}
+@media (max-width: 1280px) {
+  .content {
+    padding-inline: 50px;
+  }
+}
+@media (max-width: 1023px) {
+  .content {
+    padding-inline: 20px;
+  }
 }
 
 .container {
@@ -249,13 +263,27 @@ button {
 }
 
 .header {
-  padding-top: 38px;
+  margin-top: 38px;
+  margin-bottom: 140px;
+  background-color: var(--color-light-beige);
+  box-shadow: 0 0 0 70px var(--color-light-beige);
   padding-inline: 70px;
+  height: 90px;
+  position: relative;
+  z-index: 2;
 }
 @media (max-width: 1023px) {
   .header {
-    padding-top: 28px;
+    margin-top: 20px;
+    margin-bottom: 70px;
     padding-inline: 20px;
+    height: 48px;
+    box-shadow: 0 0 0 20px var(--color-light-beige);
+  }
+}
+@media (max-width: 767px) {
+  .header {
+    margin-bottom: 45px;
   }
 }
 .header__inner {
@@ -278,7 +306,7 @@ button {
 @media (max-width: 1023px) {
   .header__logo-wrapper {
     min-width: 93.3px;
-    min-height: 18.6x;
+    min-height: 18.6px;
   }
 }
 .header__menu {
@@ -333,10 +361,40 @@ button {
 }
 
 .hero {
-  padding-top: 140px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--color-light-beige);
+  box-shadow: 0 0 0 70px var(--color-light-beige);
+  margin-bottom: 140px;
+  position: relative;
+}
+@media (max-width: 480px) {
+  .hero {
+    margin-bottom: 45px;
+  }
+}
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 91%;
+  width: 100vw;
+  height: 32.3vw;
+  max-height: 465px;
+  background-color: var(--color-background-shadow);
+}
+.hero__tagline {
+  margin-bottom: 28px;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+@media (max-width: 767px) {
+  .hero__tagline {
+    margin-bottom: 20px;
+  }
 }
 .hero__main {
   max-width: 700px;
@@ -345,43 +403,81 @@ button {
   align-items: center;
 }
 .hero__title {
-  margin-top: 11px;
   font-size: 110px;
   font-weight: bold;
   color: var(--color-dark);
   line-height: 119px;
+  margin-bottom: 28px;
+}
+@media (max-width: 767px) {
+  .hero__title {
+    font-size: 60px;
+    line-height: 65px;
+  }
 }
 .hero__description {
-  margin-top: 28px;
+  margin-bottom: 20px;
   font-size: 21px;
   font-weight: 500;
   line-height: 33px;
   max-width: 524px;
   text-align: center;
 }
+@media (max-width: 767px) {
+  .hero__description {
+    font-size: 16px;
+    line-height: 26px;
+    max-width: 350px;
+  }
+}
 .hero__button {
-  margin-top: 20px;
+  margin-bottom: 50px;
+}
+@media (max-width: 1023px) {
+  .hero__button {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .hero__button {
+    margin-bottom: 20px;
+  }
 }
 .hero__galleries {
-  margin-top: 52px;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
 }
 .hero__galleries-list {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   -moz-column-gap: 35px;
        column-gap: 35px;
 }
 .hero__galleries-item {
   max-width: 255px;
   max-height: 95px;
-  min-height: 47.5px;
-  min-width: 127.5px;
+}
+@media (max-width: 1023px) {
+  .hero__galleries-item {
+    max-width: 150px;
+    max-height: 56px;
+  }
+}
+.hero__galleries-item > img {
+  max-width: 255px;
+  max-height: 95px;
+}
+@media (max-width: 1023px) {
+  .hero__galleries-item > img {
+    max-width: 150px;
+    max-height: 56px;
+  }
 }
 .hero__whatis {
-  margin-top: 30px;
   max-width: 300px;
   color: var(--color-brown);
+  margin-bottom: 100px;
 }
 .hero__whatis-link {
   display: flex;
@@ -389,11 +485,56 @@ button {
   -moz-column-gap: 7px;
        column-gap: 7px;
 }
-.hero__whatis__text {
+.hero__whatis-text {
   --paragraphMarginBottom: 0;
 }
+.hero__whatis-icon-wrapper {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: var(--color-brown);
+}
+@media (max-width: 1023px) {
+  .hero__whatis {
+    margin-bottom: 45px;
+  }
+}
+@media (max-width: 767px) {
+  .hero__whatis {
+    margin-bottom: 20px;
+  }
+}
 .hero__picture {
-  margin-top: 99px;
+  position: relative;
+  width: 100vw;
+  height: 46.6vw;
+}
+@media (max-width: 480px) {
+  .hero__picture {
+    height: 106.1538461538vw;
+  }
+}
+.hero__picture::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  aspect-ratio: 1440/670;
+  content: "";
+  background-image: url("../images/hero-bg.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+@media (max-width: 480px) {
+  .hero__picture::after {
+    aspect-ratio: 346/325;
+    background-image: url("../images/form-pic.svg");
+  }
 }
 
 .tagline-bg {
@@ -402,12 +543,15 @@ button {
   max-height: 25px;
   padding-inline: 12px;
   padding-block: 5px;
-  align-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .tagline-bg--pink {
   background-color: var(--color-tagline-pink);
   color: var(--color-white);
   font-size: 12px;
+  max-width: 54px;
 }
 .tagline-bg--light {
   background-color: var(--color-tagline-light);
@@ -419,28 +563,82 @@ button {
 }
 
 .solutions {
-  margin-top: 140px;
+  margin-bottom: 177px;
+  position: relative;
+}
+@media (max-width: 1023px) {
+  .solutions {
+    margin-bottom: 70px;
+  }
+}
+@media (max-width: 767px) {
+  .solutions {
+    margin-bottom: 45px;
+  }
+}
+.solutions::after {
+  content: "";
+  position: absolute;
+  background: linear-gradient(var(--color-light-beige), var(--color-white));
+  width: 100vw;
+  height: 159%;
+  z-index: -1;
+  top: -100px;
+  left: -70px;
+}
+@media (max-width: 1280px) {
+  .solutions::after {
+    left: -50px;
+    height: 129%;
+  }
+}
+@media (max-width: 1023px) {
+  .solutions::after {
+    left: -20px;
+    height: 195%;
+  }
 }
 .solutions__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 1280px) {
+  .solutions__list {
+    gap: 20px;
+  }
 }
 
 .solutions-card {
   background-color: var(--color-card-bg);
-  width: 490px;
-  height: 578px;
   border-radius: var(--border-radius);
   box-shadow: var(--card-box-shadow);
+  width: 490px;
+  height: 578px;
+  aspect-ratio: 490/578;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 1023px) {
+  .solutions-card {
+    width: 245px;
+    height: 289px;
+  }
+}
 .solutions-card__image {
   margin-top: 51px;
+}
+@media (max-width: 1023px) {
+  .solutions-card__image {
+    height: 100px;
+    width: auto;
+    margin-top: 25px;
+  }
 }
 .solutions-card__body {
   display: flex;
@@ -456,6 +654,13 @@ button {
   line-height: 52px;
   text-align: center;
 }
+@media (max-width: 1023px) {
+  .solutions-card__title {
+    font-size: 21px;
+    line-height: 26px;
+    margin-top: 13px;
+  }
+}
 .solutions-card__description {
   max-width: 437px;
   text-align: center;
@@ -464,18 +669,48 @@ button {
   font-weight: 500;
   line-height: 28px;
 }
+@media (max-width: 1023px) {
+  .solutions-card__description {
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 8px;
+  }
+}
 .solutions-card__button {
   margin-top: 23px;
   margin-bottom: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 1023px) {
+  .solutions-card__button {
+    height: 40px;
+    margin-bottom: 17px;
+    padding: 10px;
+    font-size: 14px;
+    margin-top: 11px;
+  }
 }
 
 .quiz {
-  margin-top: 177px;
   display: flex;
   align-items: center;
   justify-content: center;
   -moz-column-gap: 85px;
        column-gap: 85px;
+  margin-bottom: 135px;
+}
+@media (max-width: 1023px) {
+  .quiz {
+    -moz-column-gap: 60px;
+         column-gap: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .quiz {
+    margin-bottom: 45px;
+  }
 }
 .quiz__card {
   background-color: var(--color-green);
@@ -520,11 +755,32 @@ button {
   flex-direction: column;
   align-items: start;
 }
+@media (max-width: 767px) {
+  .quiz__body {
+    background-color: var(--color-green);
+    border-radius: var(--border-radius);
+    padding: 25px;
+    box-shadow: var(--quiz-box-shadow);
+    color: var(--color-white);
+  }
+}
 .quiz__title {
   margin-top: 18px;
   font-size: 53px;
   font-weight: bold;
   line-height: 62px;
+}
+@media (max-width: 1023px) {
+  .quiz__title {
+    font-size: 40px;
+    line-height: 54px;
+  }
+}
+@media (max-width: 767px) {
+  .quiz__title {
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
 .quiz__description {
   font-size: 21px;
@@ -532,16 +788,32 @@ button {
   line-height: 33px;
   margin-top: 25px;
 }
+@media (max-width: 1023px) {
+  .quiz__description {
+    font-size: 20px;
+    line-height: 32px;
+  }
+}
+@media (max-width: 767px) {
+  .quiz__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
 .quiz__button {
   margin-top: 23px;
+}
+@media (max-width: 767px) {
+  .quiz__button {
+    color: var(--color-white);
+  }
 }
 
 .feedback-form {
   background-color: var(--color-dark-beige);
   max-width: 1200px;
   padding-block: 44px;
-  padding-left: 40px;
-  margin-top: 135px;
+  padding-inline: 40px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -550,13 +822,35 @@ button {
   -moz-column-gap: 50px;
        column-gap: 50px;
 }
+@media (max-width: 767px) {
+  .feedback-form {
+    display: block;
+  }
+}
 .feedback-form__body {
   width: 550px;
+}
+@media (max-width: 1023px) {
+  .feedback-form__body {
+    width: 100%;
+  }
 }
 .feedback-form__title {
   font-size: 40;
   font-weight: bold;
   line-height: 54px;
+}
+@media (max-width: 1023px) {
+  .feedback-form__title {
+    font-size: 32px;
+    line-height: 42px;
+  }
+}
+@media (max-width: 767px) {
+  .feedback-form__title {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 .feedback-form__description {
   font-size: 20px;
@@ -564,12 +858,29 @@ button {
   line-height: 32px;
   margin-top: 24px;
 }
+@media (max-width: 1023px) {
+  .feedback-form__description {
+    margin-top: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .feedback-form__description {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
 .feedback-form__input-container {
   width: 380px;
   height: 65px;
   display: inline-block;
   margin-top: 30px;
   position: relative;
+}
+@media (max-width: 1023px) {
+  .feedback-form__input-container {
+    width: 100%;
+    height: 50px;
+  }
 }
 .feedback-form__input {
   height: 100%;
@@ -588,6 +899,12 @@ button {
 .feedback-form__input::placeholder {
   color: rgba(0, 0, 0, 0.45);
 }
+@media (max-width: 1023px) {
+  .feedback-form__input {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
 .feedback-form__submit-button {
   position: absolute;
   height: 29px;
@@ -599,13 +916,39 @@ button {
   right: 9px;
   top: 19px;
 }
+@media (max-width: 1023px) {
+  .feedback-form__submit-button {
+    height: 24px;
+    width: 24px;
+    right: 7px;
+    top: 13px;
+  }
+}
 
 .footer {
   margin-top: 146px;
+  margin-inline: 50px;
   display: flex;
+  justify-content: space-between;
   -moz-column-gap: 82px;
        column-gap: 82px;
-  padding-inline: 180px;
+}
+@media (max-width: 1280px) {
+  .footer {
+    -moz-column-gap: 62px;
+         column-gap: 62px;
+    margin-inline: 0;
+    margin-top: 70px;
+  }
+}
+@media (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+    margin-top: 30px;
+  }
 }
 .footer__credits {
   max-width: 340px;
@@ -630,20 +973,57 @@ button {
 }
 .footer__body {
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   -moz-column-gap: 108px;
        column-gap: 108px;
+}
+@media (max-width: 1280px) {
+  .footer__body {
+    justify-content: start;
+  }
+}
+@media (max-width: 1023px) {
+  .footer__body {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .footer__body {
+    width: 100%;
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 .footer__body-title {
   font-size: 13px;
   font-weight: 500;
   line-height: 20px;
 }
-.footer__body-link {
-  font-size: 12px;
+.footer__body-link > span {
+  display: inline-block;
+  align-items: center;
+  max-height: 23px;
+}
+.footer__body-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 7px;
+  width: 100%;
+}
+.footer__body-item {
+  font-size: 13px;
   line-height: 20px;
+  white-space: nowrap;
+}
+.footer__body-solutions {
+  min-width: 139px;
+}
+.footer__body-resources {
+  min-width: 187px;
 }
 .footer__tagline {
+  display: inline;
   margin-left: 8px;
 }
 .footer__bottom {
@@ -654,6 +1034,22 @@ button {
   justify-content: space-between;
   align-items: flex-end;
 }
+@media (max-width: 1280px) {
+  .footer__bottom {
+    padding-inline: 50px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .footer__bottom {
+    padding-inline: 20px;
+    padding-bottom: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+  }
+}
 .footer__bottom-icons {
   align-content: center;
   width: 204px;
@@ -661,6 +1057,14 @@ button {
   flex-direction: row;
   -moz-column-gap: 10px;
        column-gap: 10px;
+}
+@media (max-width: 767px) {
+  .footer__bottom-icons {
+    width: 100%;
+    justify-content: center;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
 }
 .footer__privacy {
   margin-right: 5px;
