--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -1,10 +1,9 @@
 .header {
-    margin-top: 38px;
-    margin-bottom: 140px;
+    margin-top: 25px;
+    margin-bottom: 155px;
     background-color: var(--color-light-beige);
-    box-shadow: 0 0 0 70px var(--color-light-beige);
+    box-shadow: 0 0 0 100px var(--color-light-beige);
     padding-inline: 70px;
-    height: 90px;
     position: relative;
     z-index: 2;
 
@@ -25,6 +24,7 @@
         justify-content: space-between;
         align-items: center;
         column-gap: 30px;
+        height: 60px;
     }
 
     &__logo {
@@ -47,7 +47,8 @@
     }
 
     &__menu {
-        font-size: 16px;
+        font-size: 15px;
+        line-height: 20px;
         font-weight: bold;
         margin-left: auto;
 
@@ -58,17 +59,14 @@
         &-list {
             display: flex;
             flex-direction: row;
+            column-gap: 45px;
 
-            @media (min-width: 1077px) {
-                column-gap: 43px;
-            }
-
-            @include mobile-s-above {
+            @media (max-width: 1077px) {
                 column-gap: 20px;
             }
         }
 
-        &-item {}
+        //&-item {}
 
         &-link {
             white-space: nowrap;
