--- a/styles/blocks/_feedback-form.scss
+++ b/styles/blocks/_feedback-form.scss
@@ -1,9 +1,10 @@
 .feedback-form {
     background-color: var(--color-dark-beige);
+    border-radius: var(--border-radius);
     max-width: 1200px;
 
     padding-block: 44px;
-    padding-inline: 40px;
+    padding-inline: 60px;
 
     margin-left: auto;
     margin-right: auto;
@@ -26,7 +27,7 @@
     }
 
     &__title {
-        font-size: 40;
+        font-size: 40px;
         font-weight: bold;
         line-height: 54px;
 
@@ -59,7 +60,7 @@
 
     &__input-container {
         width: 380px;
-        height: 65px;
+        height: 55px;
         display: inline-block;
         margin-top: 30px;
         position: relative;
@@ -103,7 +104,7 @@
         border-radius: 50%;
         border: none;
         right: 9px;
-        top: 19px;
+        top: 14px;
 
         @include tablet {
             height: 24px;
