--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: var(--color-light-beige);
     box-shadow: 0 0 0 70px var(--color-light-beige);
-    margin-bottom: 140px;
+    margin-bottom: 136px;
     position: relative;
 
     @include mobile-s {
@@ -22,7 +22,7 @@
     }
 
     &__tagline {
-        margin-bottom: 28px;
+        margin-bottom: 11px;
         white-space: nowrap;
         display: flex;
         flex-direction: row;
@@ -70,6 +70,10 @@
 
     &__button {
         margin-bottom: 50px;
+        width: 158px;
+        height: 47px;
+        font-size: 16px;
+        line-height: 20px;
 
         @include tablet {
             margin-bottom: 30px;
@@ -83,13 +87,14 @@
     &__galleries {
 
         margin: 0 auto 30px auto;
+        height: 100px;
 
         &-list {
             display: flex;
             flex-direction: row;
             justify-content: center;
             flex-wrap: wrap;
-            column-gap: 35px;
+            column-gap: 40px;
         }
 
         &-item {
@@ -117,10 +122,14 @@
     &__whatis {
 
         max-width: 300px;
+        height: 22px;
         color: var(--color-brown);
         margin-bottom: 100px;
+        font-size: 16px;
+        font-weight: bold;
 
         &-link {
+            line-height: 20px;
             display: flex;
             align-items: center;
             column-gap: 7px;
