--- a/styles/blocks/_quiz.scss
+++ b/styles/blocks/_quiz.scss
@@ -1,16 +1,19 @@
 .quiz {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     column-gap: 85px;
+    width: calc(100vw - 85px);
     margin-bottom: 135px;
-    
+    padding-inline: 30px;
+
     @include tablet {
-        column-gap: 60px;
+        column-gap: 45px;
     }
 
     @include mobile {
         margin-bottom: 45px;
+        width: 100%;
     }
 
     &__card {
@@ -19,9 +22,9 @@
         color: var(--color-white);
         width: 220px;
         height: 260px;
-        padding: 25px;
         box-shadow: var(--quiz-box-shadow);
-
+        margin-top: -25px;
+        padding: 19px 25px 22px 25px;
         display: flex;
         flex-direction: column;
         align-items: start;
@@ -40,23 +43,20 @@
             font-size: 28px;
             font-weight: bold;
             line-height: 32px;
-            margin-top: 12px;
+            margin-top: 17px;
         }
 
         &-begin-button {
-
-            margin-top: 33px;
+            margin-top: 31px;
             width: 170px;
             display: flex;
             justify-content: space-between;
-
             padding-top: 9px;
             border-top: 1px solid rgba(255, 255, 255, 0.18);
             font-size: 14px;
             font-weight: 500;
             line-height: 20px;
         }
-
     }
 
     &__body {
@@ -72,6 +72,11 @@
             box-shadow: var(--quiz-box-shadow);
             color: var(--color-white);
         }
+    }
+
+    &__tagline {
+        width: 54px;
+        height: 25px;
     }
 
     &__title {
@@ -110,6 +115,11 @@
 
     &__button {
         margin-top: 23px;
+        max-height: 47px;
+        width: 146px;
+        padding-inline: 27px;
+        font-size: 15px;
+        white-space: nowrap;
 
         @include mobile {
             color: var(--color-white);
