--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,12 +263,11 @@ button {
 }
 
 .header {
-  margin-top: 38px;
-  margin-bottom: 140px;
+  margin-top: 25px;
+  margin-bottom: 155px;
   background-color: var(--color-light-beige);
-  box-shadow: 0 0 0 70px var(--color-light-beige);
+  box-shadow: 0 0 0 100px var(--color-light-beige);
   padding-inline: 70px;
-  height: 90px;
   position: relative;
   z-index: 2;
 }
@@ -292,6 +291,7 @@ button {
   align-items: center;
   -moz-column-gap: 30px;
        column-gap: 30px;
+  height: 60px;
 }
 .header__logo-wrapper {
   min-width: 140px;
@@ -310,7 +310,8 @@ button {
   }
 }
 .header__menu {
-  font-size: 16px;
+  font-size: 15px;
+  line-height: 20px;
   font-weight: bold;
   margin-left: auto;
 }
@@ -322,14 +323,10 @@ button {
 .header__menu-list {
   display: flex;
   flex-direction: row;
+  -moz-column-gap: 45px;
+       column-gap: 45px;
 }
-@media (min-width: 1077px) {
-  .header__menu-list {
-    -moz-column-gap: 43px;
-         column-gap: 43px;
-  }
-}
-@media (min-width: 481px) {
+@media (max-width: 1077px) {
   .header__menu-list {
     -moz-column-gap: 20px;
          column-gap: 20px;
@@ -353,6 +350,9 @@ button {
   padding-block: 13px;
   font-weight: bold;
   font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .button--light {
   border: 2px solid var(--color-gray-button);
@@ -366,7 +366,7 @@ button {
   align-items: center;
   background-color: var(--color-light-beige);
   box-shadow: 0 0 0 70px var(--color-light-beige);
-  margin-bottom: 140px;
+  margin-bottom: 136px;
   position: relative;
 }
 @media (max-width: 480px) {
@@ -384,7 +384,7 @@ button {
   background-color: var(--color-background-shadow);
 }
 .hero__tagline {
-  margin-bottom: 28px;
+  margin-bottom: 11px;
   white-space: nowrap;
   display: flex;
   flex-direction: row;
@@ -432,6 +432,10 @@ button {
 }
 .hero__button {
   margin-bottom: 50px;
+  width: 158px;
+  height: 47px;
+  font-size: 16px;
+  line-height: 20px;
 }
 @media (max-width: 1023px) {
   .hero__button {
@@ -445,14 +449,15 @@ button {
 }
 .hero__galleries {
   margin: 0 auto 30px auto;
+  height: 100px;
 }
 .hero__galleries-list {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  -moz-column-gap: 35px;
-       column-gap: 35px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 .hero__galleries-item {
   max-width: 255px;
@@ -476,10 +481,14 @@ button {
 }
 .hero__whatis {
   max-width: 300px;
+  height: 22px;
   color: var(--color-brown);
   margin-bottom: 100px;
+  font-size: 16px;
+  font-weight: bold;
 }
 .hero__whatis-link {
+  line-height: 20px;
   display: flex;
   align-items: center;
   -moz-column-gap: 7px;
@@ -560,10 +569,11 @@ button {
   margin-left: -12px;
   padding-left: 31px;
   padding-right: 20px;
+  min-width: 188px;
 }
 
 .solutions {
-  margin-bottom: 177px;
+  margin-bottom: 200px;
   position: relative;
 }
 @media (max-width: 1023px) {
@@ -621,13 +631,24 @@ button {
   aspect-ratio: 490/578;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 @media (max-width: 1023px) {
   .solutions-card {
     width: 245px;
     height: 289px;
+  }
+}
+.solutions-card--short {
+  width: 496.9px;
+  height: 498px;
+  aspect-ratio: 496.9/498;
+}
+@media (max-width: 1023px) {
+  .solutions-card--short {
+    width: 245px;
+    height: 245px;
   }
 }
 .solutions-card__image {
@@ -637,7 +658,7 @@ button {
   .solutions-card__image {
     height: 100px;
     width: auto;
-    margin-top: 25px;
+    margin-top: 10px;
   }
 }
 .solutions-card__body {
@@ -682,6 +703,10 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 152.11px;
+  height: 48px;
+  font-size: 15px;
+  line-height: 20px;
 }
 @media (max-width: 1023px) {
   .solutions-card__button {
@@ -695,21 +720,24 @@ button {
 
 .quiz {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   -moz-column-gap: 85px;
        column-gap: 85px;
+  width: calc(100vw - 85px);
   margin-bottom: 135px;
+  padding-inline: 30px;
 }
 @media (max-width: 1023px) {
   .quiz {
-    -moz-column-gap: 60px;
-         column-gap: 60px;
+    -moz-column-gap: 45px;
+         column-gap: 45px;
   }
 }
 @media (max-width: 767px) {
   .quiz {
     margin-bottom: 45px;
+    width: 100%;
   }
 }
 .quiz__card {
@@ -718,8 +746,9 @@ button {
   color: var(--color-white);
   width: 220px;
   height: 260px;
-  padding: 25px;
   box-shadow: var(--quiz-box-shadow);
+  margin-top: -25px;
+  padding: 19px 25px 22px 25px;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -736,10 +765,10 @@ button {
   font-size: 28px;
   font-weight: bold;
   line-height: 32px;
-  margin-top: 12px;
+  margin-top: 17px;
 }
 .quiz__card-begin-button {
-  margin-top: 33px;
+  margin-top: 31px;
   width: 170px;
   display: flex;
   justify-content: space-between;
@@ -763,6 +792,10 @@ button {
     box-shadow: var(--quiz-box-shadow);
     color: var(--color-white);
   }
+}
+.quiz__tagline {
+  width: 54px;
+  height: 25px;
 }
 .quiz__title {
   margin-top: 18px;
@@ -802,6 +835,11 @@ button {
 }
 .quiz__button {
   margin-top: 23px;
+  max-height: 47px;
+  width: 146px;
+  padding-inline: 27px;
+  font-size: 15px;
+  white-space: nowrap;
 }
 @media (max-width: 767px) {
   .quiz__button {
@@ -811,9 +849,10 @@ button {
 
 .feedback-form {
   background-color: var(--color-dark-beige);
+  border-radius: var(--border-radius);
   max-width: 1200px;
   padding-block: 44px;
-  padding-inline: 40px;
+  padding-inline: 60px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -836,7 +875,7 @@ button {
   }
 }
 .feedback-form__title {
-  font-size: 40;
+  font-size: 40px;
   font-weight: bold;
   line-height: 54px;
 }
@@ -871,7 +910,7 @@ button {
 }
 .feedback-form__input-container {
   width: 380px;
-  height: 65px;
+  height: 55px;
   display: inline-block;
   margin-top: 30px;
   position: relative;
@@ -914,7 +953,7 @@ button {
   border-radius: 50%;
   border: none;
   right: 9px;
-  top: 19px;
+  top: 14px;
 }
 @media (max-width: 1023px) {
   .feedback-form__submit-button {
@@ -926,8 +965,8 @@ button {
 }
 
 .footer {
-  margin-top: 146px;
-  margin-inline: 50px;
+  margin-top: 147px;
+  margin-inline: 60px;
   display: flex;
   justify-content: space-between;
   -moz-column-gap: 82px;
@@ -1027,7 +1066,7 @@ button {
   margin-left: 8px;
 }
 .footer__bottom {
-  padding-inline: 180px;
+  padding-inline: 130px;
   margin-top: 35px;
   padding-bottom: 80px;
   display: flex;
@@ -1054,6 +1093,7 @@ button {
   align-content: center;
   width: 204px;
   display: flex;
+  align-items: center;
   flex-direction: row;
   -moz-column-gap: 10px;
        column-gap: 10px;
@@ -1067,7 +1107,8 @@ button {
   }
 }
 .footer__privacy {
-  margin-right: 5px;
+  margin-right: 7px;
+  white-space: nowrap;
 }
 
 .text-light {
