--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@
     --color-dark: #322F2E;
     --color-dark-alt: #313131;
     --color-brown: #C47344;
+    --color-dark-brown: #6c4027;
     --color-gray: #D3D3D3;
     --color-gray-button: #E1DED9;
     --color-green: #32686F;
