--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -70,6 +70,27 @@
 
         &-link {
             white-space: nowrap;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -2px;
+                width: 100%;
+                height: 2px;
+                background-color: var(--color-dark-brown);
+                transform: scaleX(0);
+                transition: transform 0.3s ease;
+            }
+
+            &:hover {
+                color: var(--color-dark-brown);
+            }
+
+            &:hover::after {
+                transform: scaleX(1);
+            }
         }
     }
 
