--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -127,6 +127,11 @@
         margin-bottom: 100px;
         font-size: 16px;
         font-weight: bold;
+        cursor: pointer;
+
+        &:hover {
+           color: var(--color-dark-brown);
+        }
 
         &-link {
             line-height: 20px;
@@ -140,7 +145,6 @@
         }
 
         &-icon {
-
             &-wrapper {
                 width: 20px;
                 height: 20px;
@@ -177,7 +181,6 @@
             width: 100%;
             aspect-ratio: 1440 / 670;
             content: '';
-            //background-color: var(--color-light-beige);
             background-image: url('../images/hero-bg.svg');
             background-size: cover;
             background-position: center;
