enhance footer links with hover effects and update structure for better accessibility

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -93,6 +93,10 @@
             font-size: 13px;
             line-height: 20px;
             white-space: nowrap;
+
+            &:hover {
+                color: var(--color-dark-brown);
+            }
         }
 
         &-solutions {
